# MERFISH_probe_design

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
MERFISH_probe_design/IO/: file_io.py
MERFISH_probe_design/codebook_design/: codebook_design_stochastic.py
MERFISH_probe_design/hamming_codes/: code_selection.py  generate_modified_hamming_code_DP.py  generate_modified_hamming_code_stochastic.py  hamming_code_analysis.py
MERFISH_probe_design/probe_design/: OTTable_dict.py  __init__.py  filters.py  flex_probe_dict.py  plot.py  primer_design.py  probe_dict.py  probe_selection.py  quality_check.py  readout_sequences.py  target_regions.py
pipelines/20210816_MERFISH_probe_design/: calculate_cell_cluster_gene_expression.ipynb  codebook_design.ipynb  hamming_code_generation.ipynb  probe_design_JM.ipynb  select_target_genes.ipynb
pipelines/20260128_human_MERFISH_probe_design/: pre_step1_get_all_RNA_sequences.ipynb  pre_step2_get_transcript_expression_levels.ipynb  pre_step4_select_readouts.ipynb  step1_hamming_code_generation.ipynb  step2_codebook_design.ipynb  step3_probe_design.ipynb
pipelines/tests/: test_Tm.ipynb
tests_and_examples/: example_calculate_cell_cluster_gene_expression.ipynb  example_generate_gene_level_transcriptome.ipynb  example_hamming_code_generation.ipynb  example_probe_design_JM.ipynb  example_select_target_genes.ipynb  example_single_molecule_probe_design.ipynb  test_Tm.ipynb
tests_and_examples/data/example_codebook_design/: cluster_gene_exp.npz
